crates/vexor-compiler/tests/golden/error/input/unclosed_string.vx
// unclosed string
let label = "hello
export Circle(10)
